--- a/WebAppTestPipelineUnitTest/WebAppTestPipelineUnitTest.csproj
+++ b/WebAppTestPipelineUnitTest/WebAppTestPipelineUnitTest.csproj
@@ -12,4 +12,16 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Settings1.runsettings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+    </None>
+  </ItemGroup>
+
 </Project>
