--- a/WebAppTestPipelineUnitTest/WebAppTestPipelineUnitTest.csproj
+++ b/WebAppTestPipelineUnitTest/WebAppTestPipelineUnitTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="setting.runsettings" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
